Added pom.xml, fixed BaseTest.java, fixed .gitignore